# sorcerers

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
benches/: card_query.rs
documents/: rulebook.md
src/: game.rs  main.rs  player.rs
src/card/: avatar.rs  database.rs  mod.rs  site.rs  spell.rs
src/client/: Cargo.toml
src/lib/: Cargo.toml  booster.rs  collection.rs  deck.rs  effect.rs  effect_test.rs  error.rs  evaluation.rs  game.rs  game_test.rs  mod.rs  player.rs  playground.rs  query.rs  render.rs  state.rs  state_test.rs  zone.rs  zone_test.rs
src/lib/benches/: card_query.rs
src/lib/card/: avatar.rs  card.rs  card_test.rs  foot_soldier.rs  frog.rs  mod.rs  rubble.rs
src/lib/card/avatar/: mod.rs  util.rs
src/lib/card/beta/: abundance.rs  accursed_albatross.rs  adept_illusionist.rs  albespine_pikemen.rs  all_terrain_vestments.rs  alvalinne_dryads.rs  amazon_warriors.rs  amethyst_core.rs  ancient_dragon.rs  angels_egg.rs  anui_undine.rs  apprentice_wizard.rs  aquamarine_core.rs  aqueduct.rs  aramos_mercenaries.rs  arid_desert.rs  askelon_phoenix.rs  assorted_animals.rs  astral_alcazar.rs  atlantean_fate.rs  atlas_wanderers.rs  autumn_river.rs  autumn_unicorn.rs  avatar_of_water.rs  awakened_mummies.rs  azuridge_caravan.rs  backstab.rs  bane_widow.rs  battering_ram.rs  battlefield.rs  battlemage.rs  beast_of_burden.rs  bedrock.rs  belfry.rs  belmotte_longbowmen.rs  black_obelisk.rs  blasted_oak.rs  blaze.rs  blink.rs  blizzard.rs  (+368 more)
src/lib/card/site/: aqueduct.rs  arid_desert.rs  astral_alcazar.rs  cornerstone.rs  mod.rs  red_desert.rs  remote_desert.rs  shifting_sands.rs  site.rs  spring_river.rs  util.rs  vesuvius.rs
src/lib/card/site/beta/: aqueduct.rs  arid_desert.rs  astral_alcazar.rs  cornerstone.rs  mod.rs  red_desert.rs  remote_desert.rs  shifting_sands.rs  spring_river.rs  vesuvius.rs
src/lib/card/spell/: accursed_albatross.rs  adept_illusionist.rs  mod.rs  util.rs
src/lib/card/spell/beta/: accursed_albatross.rs  adept_illusionist.rs  askelon_phoenix.rs  blaze.rs  clamor_of_harpies.rs  colicky_dragonettes.rs  cone_of_flame.rs  escyllion_cyclops.rs  fireball.rs  firebolts.rs  heat_ray.rs  hillock_basilisk.rs  incinerate.rs  infernal_legion.rs  lava_salamander.rs  mad_dash.rs  major_explosion.rs  minor_explosion.rs  mod.rs  ogre_goons.rs  petrosian_cavalry.rs  pit_vipers.rs  quarrelsome_kobolds.rs  raal_dromedary.rs  rimland_nomads.rs  sacred_scarabs.rs  sand_worm.rs  wayfaring_pilgrim.rs  wildfire.rs
src/lib/card_old/: mod.rs
src/lib/deck/: mod.rs  precon_beta.rs
src/lib/deck/precon/: beta.rs  mod.rs
src/lib/effect/: lifecycle.rs  log.rs  runtime.rs
src/lib/networking/: client.rs  message.rs  mod.rs
src/lib/query/: cache.rs  card_query.rs  effect_query.rs  mod.rs  zone_query.rs
src/server/: Cargo.toml
src/server/repository/: booster_packs.rs  cards.rs  decks.rs  mod.rs  user_repository.rs  users.rs
tools/: generate_sfx.mjs
