[workspace]
members = [
    "src/lib",
    "src/client",
    "src/server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-channel = "2.5.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
eframe = { version = "0.34", features = ["default"] }
egui = "0.34"
image = { version = "0.24", features = ["jpeg", "webp"] }
kira = "0.11.0"
linkme = "0.3.35"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
unidecode = "0.3.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[workspace.dependencies.sorcerers]
path = "src/lib"
package = "sorcerers-core"

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]
