[package]
name = "sorcerers-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "bin/main.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
rmp-serde.workspace = true
sorcerers.workspace = true
tokio.workspace = true
uuid.workspace = true
