[package]
name = "sorcerers-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "bin/main.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chrono.workspace = true
email_address.workspace = true
async-channel.workspace = true
lettre.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
sorcerers.workspace = true
tokio.workspace = true
uuid.workspace = true
